2002-03-09  Sam Steingold  <sds@gnu.org>

	autoconf tweaks for hp/ux and cygwin
	* autoconf/aclocal.m4 (CL_CANONICAL_HOST_CPU_FOR_FFCALL)
	(CL_CANONICAL_HOST_CPU): hppa2.0* --> hppa
	* configure.in (HAVE_GETHOSTENT): check for gethostent(3)
	* unixconf.h.in (HAVE_GETHOSTENT): added an #undef
	* socket.d (RESOLVE-HOST-IPADDR-INTERNAL): check HAVE_GETHOSTENT
	before calling gethostent()

2002-03-09  Peter Burwood  <clisp@peterb.org.uk>

	cygwin (u)alarm is adequate - do not re-implement it
	* unix.d (HAVE_UALARM): Remove as defined in unixconf.h.
	* unixaux.d (alarm, ualarm, sleep, usleep): Remove function as
	cygwin supplied function works.
	(do_alarm, do_sleep, interrupt_handler, DoInterruptible): Remove
	support functions.
	(alarm_thread, alarm_date, alarm_interval): Remove support variables.

2002-03-09  Peter Wood <peter.wood@worldonline.dk>
	    Sam Steingold  <sds@gnu.org>

	added signal handling
	* linux.lisp: interface to <bits/sigset.h>, <bits/sigaction.h>
	and <signal.h>
	* wrap.lisp: many wrappers and examples

2002-03-08  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/wrap.lisp (real-path): linux:realpath does
	not return an integer flag
	(vec2string): use :END arg to CONVERT-STRING-FROM-BYTES instead
	of SUBSEQ
	* bindings/linuxlibc6/linux.lisp (realpath): return a pointer to
	C-ARRAY-MAX, not C-ARRAY
	(errno): a simple DEF-C-VAR, not a SYMBOL-MACRO
	Suggested by Joerg Hoehle

2002-03-08  Sam Steingold  <sds@gnu.org>

	renamed dirkey.lisp to dirkey1.lisp (like foreign1.lisp/foreign.d)
	since (compile-file "foo") clobbers foo.c (because of FFI)
	* init.lisp: "dirkey1", not "dirkey"
	* makemake.in (LPARTS): ditto
	* dirkey1.lisp: renamed from dirkey.lisp
	do the actual coding in package SYSTEM

2002-03-08  Sam Steingold  <sds@gnu.org>

	* genclisph.d (nonreturning_function, SLONGLONG, ULONGLONG):
	fixed for MICROSOFT
	* makemake.in: create modules-related rules on non-UNIX systems
	($with_export_syscalls): do not add -lm to LIBS on win32